syntax = "proto3";

option go_package = "/calculatorpb";

package calculator;

service CalculatorService {

    // add method
    rpc Add (CalculatorRequest) returns (CalculatorResult) {}
    // subtract method 
    rpc Subtract (CalculatorRequest) returns (CalculatorResult) {}
    // multiplication method
    rpc Multiply (CalculatorRequest) returns (CalculatorResult) {}
    // divide method 
    rpc Divide (CalculatorRequest) returns (CalculatorResult) {}
}

message CalculatorRequest {
    double operand1 = 1;
    double operand2 = 2;
}

message CalculatorResult {
    double result = 1;
}